[package]
name = "osu-unsubmitted-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "io-std",
    "net",
    "io-util",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
secrecy = "0.10.3"
log = { version = "0.4.25", features = [
    "release_max_level_info",
    "max_level_info",
] }
env_logger = "0.11.6"
itertools = "0.14.0"
tar = "0.4.43"
